--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
-*{
-  margin:0%;
-  padding:0%;
-  box-sizing: border-box;
-  font-family: 'poppins', sans-serif;
+* {
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
 }
 
-body{
+body {
     background: #f7edff;
 }
 
 
-.buttons{
+.buttons {
     margin: 50px;
 }
 
-.buttons button{
+.buttons button {
     background: #333;
     color: #fff;
     border: 0;
@@ -25,7 +25,7 @@ body{
     cursor: pointer;
 }
 
-#toastBox{
+#toastBox {
     position: absolute;
     bottom: 30px;
     right: 30px;
@@ -35,4 +35,91 @@ body{
     overflow: hidden;
     padding: 20px;
 
+}
+
+.toast {
+    width: 400px;
+    height: 80px;
+    background: #fff;
+    font-weight: 500;
+    margin: 15px 0;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    transform: translateX(100%);
+    animation: moveleft 0.5s linear forwards;
+}
+
+@keyframes moveleft {
+    100% {
+        transform: translateX(0);
+
+    }
+}
+
+.toast i {
+    margin: 0 20px;
+    font-size: 35px;
+    color: green;
+}
+
+.toast.error i {
+    color: red;
+}
+
+.toast.invalid i {
+    color: orange;
+}
+
+.toast::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5px;
+    background: green;
+    animation: anim 5s linear forwards;
+}
+
+@keyframes anim {
+    100% {
+        width: 0;
+    }
+}
+
+.toast.error::after {
+    background: red;
+}
+
+.toast.invalid::after {
+    background: orange;
+}
+
+@media (max-width:360px) {
+    .buttons {
+        margin-top: 72px;
+    }
+
+    .buttons button {
+        width: 73px;
+        height: 34px;
+        margin: 4px;
+    }
+
+    #toastBox {
+        bottom: 30px;
+        right: 30px;
+        padding: 10px;
+    }
+
+    .toast {
+        width: 250px;
+        height: 55px;
+    }
+
+    .toast i {
+        font-size: 25px;
+    }
 }
